[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lain_upload"
version = "1.13"
description = "pomf.lain.la uploader."
readme = "README.md"
authors = [
    { name = "NecRaul", email = "necraul@kuroneko.dev" }
]
license = "LGPL-2.1-only"
license-files = ["LICENSE"]
keywords = [
    "python",
    "uploader",
    "pomf",
    "lain",
    "lain.la",
    "pomf.lain.la",
    "kuroneko"
]
dependencies = [
    "pyperclip>=1.8.2",
    "requests>=2.31.0"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
]

[project.urls]
Homepage = "https://github.com/NecRaul/lain.la-pomf-uploader"
Documentation = "https://github.com/NecRaul/lain.la-pomf-uploader#readme"
Repository = "https://github.com/NecRaul/lain.la-pomf-uploader"
Issues = "https://github.com/NecRaul/lain.la-pomf-uploader/issues"

[project.scripts]
lain-upload = "lain_upload:main"

[tool.setuptools]
py-modules = ["upload"]

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
exclude = '''
(
    \.git
  | \.venv
  | build
  | dist
  | .*\.egg-info
)
'''
