[build-system]
requires = ["uv_build>=0.9.28"]
build-backend = "uv_build"

[project]
name = "lain-upload"
version = "1.17"
description = "A simple CLI file uploader for multiple file-hosting services, with optional clipboard copy."
readme = "README.md"
authors = [{ name = "NecRaul", email = "necraul@kuroneko.dev" }]
license = "LGPL-2.1-only"
license-files = ["LICENSE"]
keywords = [
  "python",
  "file-upload",
  "file-uploader",
  "uploader",
  "catbox",
  "litterbox",
  "pomf",
  "uguu",
  "fileditch",
  "0x0",
  "gofile",
  "pixeldrain",
  "lain-upload",
  "lain",
  "kuroneko",
]
requires-python = ">=3.10"
dependencies = ["requests>=2.32.5", "requests-toolbelt>=1.0.0"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP",
]

[project.optional-dependencies]
clipboard = ["pyperclip>=1.11.0"]

[project.urls]
Homepage = "https://github.com/NecRaul/lain-upload"
Documentation = "https://github.com/NecRaul/lain-upload#readme"
Repository = "https://github.com/NecRaul/lain-upload"
Issues = "https://github.com/NecRaul/lain-upload/issues"

[project.scripts]
lain-upload = "lain_upload.cli:main"

[dependency-groups]
dev = [
  "pyperclip>=1.11.0",
  "ruff>=0.14.14",
  "ty>=0.0.14",
  "pre-commit>=4.5.1",
  "debugpy>=1.8.20",
  "pytest>=9.0.2",
]

[tool.uv]
default-groups = ["dev"]
python-preference = "only-managed"
trusted-publishing = "always"

[tool.uv.build-backend]
module-name = "lain_upload"
module-root = "src"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"
include = ["pyproject.toml", "src/**/*.py", "tests/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.ty.src]
include = ["src/lain_upload", "tests"]
